# complex_calculator

./: CMakeLists.txt  LICENSE  README.md  ToPostfix.c  ToPostfixWithFunctions.c  complex.c  complex.h  main.c  stackAndTokens.c  stackAndTokens.h
core/: ToPostfix.c  complex.c  complex.h  config.h  operations.c  operations.h  stack.c  stack.h  stackAndTokens.c  stackAndTokens.h  toPostfix.c  toPostfix.h  token.c  token.h  utils.c  utils.h  varibleManager.c  varibleManager.h
